--- a/.gitconfig
+++ b/.gitconfig
@@ -5,3 +5,7 @@
 	default = simple
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+    a = add
+    b = branch
+    c = commit
+    s = status
