--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,8 @@
 	name = Andrew van Rooyen
 [push]
 	default = simple
+[core]
+    editor = nvim
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
     a = add
