--- a/.pylintrc
+++ b/.pylintrc
@@ -53,7 +53,7 @@ extension-pkg-whitelist=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=R0914,R0913,R0902,R0903,C0103,W0142
+disable=R0914,R0913,R0902,R0903,C0103,W0142,C0330
 
 
 [REPORTS]
