--- a/.hgrc
+++ b/.hgrc
@@ -4,7 +4,7 @@ editor = nvim
 merge = nvim -d
 
 [alias]
-lg = log -G --limit 5
+lg = log --graph --limit 10 --template "{label('red bold', node|short)} - {label('magenta', ifeq(branch, 'default', '', '({branch}) '))}{desc} {label('green', '({date|age})')} {label('blue', author|person)}\n"
 
 [extensions]
 color =
