Use Dotbot to manage dotfiles

--- a/.hgrc
+++ b/.hgrc
@@ -7,6 +7,7 @@ merge = nvim -d
 lg = log --graph --limit 10 --template "{label('red bold', node|short)} - {label('magenta', ifeq(branch, 'default', '', '({branch}) '))}{desc} {label('green', '({date|age})')} {label('blue', author|person)}\n"
 
 [extensions]
+purge =
 progress =
 color =
 remotefilelog = /home/andrew/code/remotefilelog/remotefilelog
