Various changes to .zshrc and hgrc. Use vim-startify

--- a/.hgrc
+++ b/.hgrc
@@ -4,14 +4,9 @@ editor = nvim
 merge = nvim -d
 
 [alias]
-lg = log --graph --limit 10 --template "{label('red bold', node|short)} - {label('magenta', ifeq(branch, 'default', '', '({branch}) '))}{desc} {label('green', '({date|age})')} {label('blue', author|person)}\n"
+lg = log --graph --limit 10 --template "{label('red bold', node|short)} {label('yellow', rev)} - {label('magenta', ifeq(branch, 'default', '', '({branch}) '))}{desc} {label('green', '({date|age})')} {label('blue', author|person)}\n"
 
 [extensions]
 purge =
 progress =
 color =
-remotefilelog = /home/andrew/code/remotefilelog/remotefilelog
-
-[remotefilelog]
-cachepath = /tmp/hgcache
-cachelimit = 3 GB
