--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,74 +1,33 @@
-# change prefix to Ctrl-a (like in gnu-screen)
-
+# Prefix to C-a
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-
-# shell
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
-
-
-# start with window 1 (instead of 0)
-set -g base-index 1
-
-
-# start with pane 1
-set -g pane-base-index 1
-
-
-# screen mode
-set -g default-terminal "screen-256color"
-
-
-# source config file
+# General
 bind r source-file ~/.tmux.conf
+set -g base-index 1
+set -g history-limit 10000
+set -g mouse on
+set -g mouse-utf8 on
+set -g pane-base-index 1
+set -s escape-time 0
 
-
-# history
-set -g history-limit 4096
-
-
-# allow terminal scrolling
-set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
-# use vi mode
-setw -g mode-keys vi
-set -g status-keys vi
-setw -g utf8 on
-# use mouse in copy mode
-setw -g mode-mouse on
-
-
-# tmux-zoom.sh
-bind C-z run "tmux-zoom.sh"
-
-# easy-to-remember split pane commands
+# Panes
 bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+bind -n M-Down select-pane -D
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
 
-# with mouse (click on pretty little boxes)
-set -g mouse-select-window on
-
-# colon :
-bind : command-prompt
-
-# panes
-set -g mouse-select-pane on
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-
-# moving between panes with vim movement keys
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
+# ================================
+# Theme based on base16-ocean-dark
+# ================================
 # status line
 set -g status-utf8 on
 set -g status-justify left
@@ -76,18 +35,15 @@ set -g status-bg default
 set -g status-fg colour12
 set -g status-interval 2
 
-
 # messaging
 set -g message-fg black
 set -g message-bg yellow
 set -g message-command-fg blue
 set -g message-command-bg black
 
-
-#window mode
+# window mode
 setw -g mode-bg colour6
 setw -g mode-fg colour0
-
 
 # window status
 #setw -g window-status-format " #F#I:#W#F "
@@ -104,7 +60,6 @@ setw -g window-status-attr reverse
 # Info on left (I don't have a session display for now)
 set -g status-left ''
 
-
 # loud or quiet?
 set-option -g visual-activity off
 set-option -g visual-bell off
@@ -112,17 +67,15 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
-
 # tmux clock
 set -g clock-mode-colour blue
-
 
 # some key-binding changes
 bind x kill-pane
 bind X next-layout
 bind Z previous-layout
 
-#urxvt tab like window switching (-n: no prior escape seq)
+# urxvt tab like window switching (-n: no prior escape seq)
 bind -n S-down new-window
 bind -n S-left prev
 bind -n S-right next
