--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,9 +12,10 @@
     ~/.config/nvim: .vim
     ~/.gitconfig: .gitconfig
     ~/.hgrc: .hgrc
+    ~/.oh-my-zsh/themes/wraithy.zsh-theme: wraithy.zsh-theme
     ~/.pylintrc: .pylintrc
+    ~/.tmux.conf: .tmux.conf
     ~/.vim: .vim
     ~/.vimrc: .vimrc
     ~/.zshrc: .zshrc
-    ~/.oh-my-zsh/themes/wraithy.zsh-theme: wraithy.zsh-theme
 
