Add some tmux plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,8 @@ set -g mouse on
 set -g mouse-utf8 on
 set -g pane-base-index 1
 set -s escape-time 0
+set-window-option -g mode-keys vi
+set-window-option -g xterm-keys on
 
 # Panes
 bind | split-window -h
@@ -133,3 +135,11 @@ set -g message-fg colour232
 set -g message-bg colour166
 
 # }
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX plugin manager
+run '~/.tmux/plugins/tpm/tpm'
