--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,24 +34,24 @@ bind -n S-left prev
 bind -n S-right next
 
 # Status line
-set -g status-left ''
-set -g status-utf8 on
-set -g status-justify left
-set -g status-interval 2
+set -g status-attr dim
 set -g status-bg colour234
 set -g status-fg colour137
+set -g status-interval 2
+set -g status-justify left
+set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour236] %d %b #[fg=colour233,bg=colour238] %I:%M '
-setw -g window-status-current-attr bold
+set -g status-utf8 on
 setw -g window-status-current-bg colour238
 setw -g window-status-current-fg colour81
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
 # Panes
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+set -g pane-border-bg colour234
+set -g pane-border-fg colour240
+set -g pane-active-border-bg colour234
+set -g pane-active-border-fg colour4
 
 # Messages
 set -g message-fg colour232
