--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,11 @@
 # Prefix to C-a
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
 
 # General
 bind r source-file ~/.tmux.conf
+set -g allow-rename off
 set -g base-index 1
 set -g default-terminal "screen-256color"
 set -g history-limit 10000
@@ -29,7 +30,6 @@ bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
 # Windows
-bind -n S-down new-window
 bind -n S-left prev
 bind -n S-right next
 
