--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,22 +1,20 @@
 - defaults:
     link:
       relink: true
+      create: true
 
-- clean: ['~', '~/.config']
+- clean: ['~', '~/.config', '~/.config/nvim']
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
 
 - link:
     ~/.agignore: .agignore
-    ~/.config/nvim/init.vim: .vimrc
-    ~/.config/nvim: .vim
+    ~/.config/nvim/init.vim: init.vim
     ~/.gitconfig: .gitconfig
     ~/.hgrc: .hgrc
     ~/.oh-my-zsh/themes/wraithy.zsh-theme: wraithy.zsh-theme
     ~/.pylintrc: .pylintrc
     ~/.tmux.conf: .tmux.conf
-    ~/.vim: .vim
-    ~/.vimrc: .vimrc
     ~/.zshrc: .zshrc
 
