--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,8 +39,7 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-interval 2
 set -g status-justify left
-set -g status-left ' #[bold]#S '
-set -g status-right '#[fg=colour233,bg=colour236] %d %b #[fg=colour233,bg=colour238] %I:%M '
+set -g status-right '#[fg=colour81]#S '
 set -g status-utf8 on
 setw -g window-status-current-bg colour238
 setw -g window-status-current-fg colour81
