--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,7 @@ set -g status-fg colour137
 set -g status-interval 2
 set -g status-justify left
 set -g status-right '#[fg=colour81]#S '
+set -g status-left ''
 set -g status-utf8 on
 setw -g window-status-current-bg colour238
 setw -g window-status-current-fg colour81
