Swapped dirvish back for vinegar. Fixed italics in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ bind-key C-Space send-prefix
 bind r source-file ~/.tmux.conf
 set -g allow-rename off
 set -g base-index 1
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color-italic"
 set -g history-limit 10000
 set -g mouse on
 set -g mouse-utf8 on
