--- a/.pylintrc
+++ b/.pylintrc
@@ -53,7 +53,7 @@ extension-pkg-whitelist=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=R0914,R0913,R0902,R0903,W0142,invalid-name,missing-docstring,singleton-comparison
+disable=R0914,R0913,R0902,R0903,W0142,invalid-name,missing-docstring,singleton-comparison,redefined-outer-name
 
 
 [REPORTS]
@@ -109,7 +109,7 @@ zope=no
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E0201 when accessed. Python regular
 # expressions are accepted.
-generated-members=REQUEST,acl_users,aq_parent,add,query,commit,add_all
+generated-members=REQUEST,acl_users,aq_parent,add,query,commit,add_all,rollback
 
 
 [BASIC]
