--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,7 +14,9 @@
     ~/.gitconfig: .gitconfig
     ~/.hgrc: .hgrc
     ~/.oh-my-zsh/themes/wraithy.zsh-theme: wraithy.zsh-theme
+    ~/.pip/pip.conf: pip.conf
     ~/.pylintrc: .pylintrc
+    ~/.pypirc: .pypirc
     ~/.tmux.conf: .tmux.conf
     ~/.unittest.cfg: .unittest.cfg
     ~/.zshrc: .zshrc
