Add dev/prod/pod scripts

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -20,3 +20,6 @@
     ~/.tmux.conf: .tmux.conf
     ~/.unittest.cfg: .unittest.cfg
     ~/.zshrc: .zshrc
+    ~/.local/bin/prod: scripts/prod
+    ~/.local/bin/dev: scripts/dev
+    ~/.local/bin/pod: scripts/pod
