--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# Fix nvim cursor
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+
 # Prefix to C-a
 unbind C-b
 set-option -g prefix C-Space
@@ -56,11 +59,3 @@ set -g pane-active-border-fg colour4
 # Messages
 set -g message-fg colour232
 set -g message-bg colour166
-
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-# Initialize TMUX plugin manager
-run '~/.tmux/plugins/tpm/tpm'
