--- a/pip.conf
+++ b/pip.conf
@@ -1,2 +1,2 @@
 [global]
-extra-index-url = https://nomanini:n0man1n1@pypi.nomanini.com/simple/
+extra-index-url = https://nomanini:foo@pypi.nomanini.com/simple/
