--- a/.gitconfig
+++ b/.gitconfig
@@ -15,3 +15,7 @@
 	tool = vimdiff
 [mergetool]
 	path = nvim
+[url "git@github.com:"]
+	insteadOf = https://github.com/
+[url "git@bitbucket.org:"]
+	insteadOf = https://bitbucket.org/
