--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,3 +57,8 @@ set -g pane-active-border-fg colour4
 # Messages
 set -g message-fg colour232
 set -g message-bg colour166
+
+# Make selections work even more like vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
