--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,27 +36,21 @@ bind -n S-left prev
 bind -n S-right next
 
 # Status line
-set -g status-attr dim
-set -g status-bg colour234
-set -g status-fg colour137
+set -g status-style bg=colour234,fg=colour137
 set -g status-interval 2
 set -g status-justify left
 set -g status-right ' #[fg=colour81,bg=colour234]#S '
 set -g status-left '#{prod_warning}'
-setw -g window-status-current-bg colour238
-setw -g window-status-current-fg colour81
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-current-style bg=colour238,fg=colour81
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
 # Panes
-set -g pane-border-bg colour234
-set -g pane-border-fg colour240
-set -g pane-active-border-bg colour234
-set -g pane-active-border-fg colour4
+set -g pane-border-style bg=colour234,fg=colour240
+set -g pane-active-border-style bg=colour234,fg=colour4
 
 # Messages
-set -g message-fg colour232
-set -g message-bg colour166
+set -g message-style fg=colour232,bg=colour166
 
 # Make selections work even more like vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
