more tweaks for macos, change F\d mappings in vim to be leader mappings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ bind -n S-left prev
 bind -n S-right next
 
 # Status line
-set -g status-style bg=colour234,fg=colour137
+set -g status-style dim,bg=colour234,fg=colour137
 set -g status-interval 2
 set -g status-justify left
 set -g status-right ' #[fg=colour81,bg=colour234]#S '
