--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -20,3 +20,4 @@
     ~/.zshrc: .zshrc
     ~/.config/alacritty/alacritty.yml: alacritty.yml
     ~/.config/karabiner: karabiner
+    ~/.config/mpv: mpv
