remove dev/prod warning for tmux. remove dev/prod switching scripts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,9 +14,6 @@ set -s escape-time 0
 setw -g mode-keys vi
 setw -g xterm-keys on
 
-# Make sure the kube_context is correct on startup
-run-shell '[ -z "$(kubectl config current-context | grep '"'"'.*dev'"'"' 2>&1)" ] && tmux set-env -g prod_warning '"'"'#[fg=colour232,bg=colour202] PROD '"'"' || tmux set-env -gu prod_warning'
-
 # Panes
 bind | split-window -h
 bind - split-window -v
@@ -40,7 +37,7 @@ set -g status-style dim,bg=colour234,fg=colour137
 set -g status-interval 2
 set -g status-justify left
 set -g status-right ' #[fg=colour81,bg=colour234]#S '
-set -g status-left '#{prod_warning}'
+set -g status-left ''
 setw -g window-status-current-style bg=colour238,fg=colour81
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
