--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,5 +51,7 @@ set -g message-style fg=colour232,bg=colour166
 
 # Make selections work even more like vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
