--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,3 +55,14 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selecti
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
+# This section requires Tmux Plugin Manager (TPM). Install it by running the
+# following.
+#
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+#
+# Hit [prefix + I] to install all plugins.
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+run '~/.tmux/plugins/tpm/tpm'
