save install vim-coc extensions in a global variable

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,7 @@ set -g mouse on
 set -s escape-time 0
 setw -g mode-keys vi
 setw -g xterm-keys on
+set-option -sa terminal-overrides ',xterm-256color:RGB' # neovim said to do this
 
 # Panes
 bind | split-window -h
@@ -64,5 +65,6 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
