various updates. notably, set termguicolors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ set -s escape-time 0
 setw -g mode-keys vi
 setw -g xterm-keys on
 set-option -sa terminal-overrides ',xterm-256color:RGB' # neovim said to do this
+set-option -g focus-events on # neovim said to do this
 
 # Panes
 bind | split-window -h
