--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,8 @@ set-option -g focus-events on # neovim said to do this
 # Panes
 bind | split-window -h
 bind - split-window -v
+bind c new-window
+bind n new-window -c '#{pane_current_path}'
 unbind '"'
 unbind %
 bind -n M-Down select-pane -D
