--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -9,22 +9,27 @@
   "coc.preferences.extensionUpdateCheck": "weekly",
   "coc.preferences.formatOnType": true,
   "coc.preferences.formatOnSaveFiletypes": [
-    "python"
-  ],
-  "eslint.filetypes": [
-    "javascript",
-    "typescript",
-    "javascript",
-    "jsx",
+    "python",
     "typescriptreact"
   ],
+  "angular.experimental-ivy": true,
   "javascript.suggestionActions.enabled": false,
   "eslint.autoFixOnSave": true,
   "tsserver.enableJavascript": true,
   "tsserver.npm": "/Users/andrew/.config/nvm/versions/node/v14.13.1/bin/npm",
-  "python.jediEnabled": false,
+  "python.pythonPath": "/Users/andrew/.local/bin/python",
+  "python.analysis.diagnosticSeverityOverrides": {
+    "reportGeneralTypeIssues": "warning",
+    "reportUnusedImport": "warning"
+  },
+  "python.linting.flake8Enabled": false,
+  "python.linting.flake8Args": ["--max-line-length", "120"],
+  "python.linting.flake8CategorySeverity.F": "Warning",
+  "python.linting.flake8CategorySeverity.E": "Warning",
   "python.linting.pylintEnabled": true,
   "python.linting.pylintArgs": ["--load-plugins pylint_django"],
+  "python.linting.mypyEnabled": true,
+  "python.linting.mypyCategorySeverity.error": "Information",
   "python.formatting.provider": "black",
   "python.formatting.blackArgs": ["--line-length", "120"],
   "languageserver": {
