at this point, I'm going to stop pretending these commit messages are valuable

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,3 +71,6 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
+# Fig Tmux Integration: Enabled
+source-file ~/.fig/tmux
+# End of Fig Tmux Integration
