--- a/.gitconfig
+++ b/.gitconfig
@@ -32,3 +32,15 @@
 	cmd = nvim -d $LOCAL $REMOTE $MERGED -c '$wincmd w' -c 'wincmd J'
 [pull]
 	rebase = false
+[pager]
+    # brew install git-delta
+    diff = delta
+    log = delta
+    reflog = delta
+    show = delta
+[interactive]
+    diffFilter = delta --color-only
+[delta]
+    line-numbers = true
+    side-by-side = true
+    syntax-theme = base16-256
