add script to reset all tmux session working dirs

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,6 +18,7 @@
     ~/.pylintrc: .pylintrc
     ~/.config/pycodestyle: pycodestyle
     ~/.tmux.conf: .tmux.conf
+    ~/.config/tmux: tmux
     ~/.unittest.cfg: .unittest.cfg
     ~/.zshrc: .zshrc
     ~/.config/zsh: zsh
