--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,10 +54,14 @@ set -g pane-active-border-style bg=colour234,fg=colour4
 set -g message-style fg=colour232,bg=colour166
 
 # Make selections work even more like vi
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi r send-keys -X rectangle-toggle
+
+# Reset all working dirs (useful after tmux-resurrect restores things)
+unbind -T prefix \~
+bind -T prefix \~ run-shell ~/.config/tmux/reset_all_session_working_dirs.sh
 
 # This section requires Tmux Plugin Manager (TPM). Install it by running the
 # following.
@@ -66,11 +70,9 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 #
 # Hit [prefix + I] to install all plugins.
 
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
-# Fig Tmux Integration: Enabled
-source-file ~/.fig/tmux
-# End of Fig Tmux Integration
