--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,7 +41,7 @@ set -g status-style dim,bg=colour234,fg=colour137
 set -g status-interval 2
 set -g status-justify left
 set -g status-right ' #[fg=colour81,bg=colour234]#S '
-set -g status-left ''
+set -g status-left '#(tmux-kube-status)'
 setw -g window-status-current-style bg=colour238,fg=colour81
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
