--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,51 +7,55 @@ bind-key C-Space send-prefix
 bind r source-file ~/.tmux.conf
 set -g allow-rename off
 set -g base-index 1
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-24bit"
 set -g history-limit 10000
 set -g mouse on
+set -g monitor-activity on
 set -s escape-time 0
 setw -g mode-keys vi
 setw -g xterm-keys on
-set-option -sa terminal-overrides ',xterm-256color:RGB' # neovim said to do this
+set-option -sa terminal-overrides ',xterm-24bit:Tc'
 set-option -g focus-events on # neovim said to do this
 
-# Panes
+# Binds - Panes
 bind | split-window -h
 bind - split-window -v
 bind c new-window
 bind n new-window -c '#{pane_current_path}'
 unbind '"'
 unbind %
-bind -n M-Down select-pane -D
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-# Windows
+# Binds - Windows
 bind -n S-left prev
 bind -n S-right next
 
 # Status line
-set -g status-style dim,bg=colour234,fg=colour137
+# Colors
+# Black: 16
+# Light black: 0
+# Dark grey: 237
+# Light grey: dim 7
+# Highlight: 4
+set -g status-style 'bg=color0'
 set -g status-interval 2
 set -g status-justify left
-set -g status-right ' #[fg=colour81,bg=colour234]#S '
+set -g status-right '#[fg=color237,bg=color0]#[fg=color16,bg=color237]#S#[fg=color237,bg=color0] #[fg=color237,bg=color0]#[bg=color237,fg=color16]#{session_path}#[none,fg=color237,bg=color0]'
 set -g status-left '#(tmux-kube-status)'
-setw -g window-status-current-style bg=colour238,fg=colour81
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=255]#W#[fg=colour50]#F '
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-current-style 'bg=color0'
+setw -g window-status-current-format " #[fg=color237]#[fg=color4,bg=color237]#I #[fg=color16]#W #[fg=color237,bg=color0]"
+setw -g window-status-format ' #[dim,fg=color4] #I #[dim,fg=color7]#W #[fg=color4]#(tmux-window-flags "#{window_flags}") '
+setw -g window-status-activity-style ''
 
 # Panes
-set -g pane-border-style bg=colour234,fg=colour240
-set -g pane-active-border-style bg=colour234,fg=colour4
+set -g pane-border-style 'bg=color0,fg=color237'
+set -g pane-active-border-style 'bg=color0,fg=color4'
 
 # Messages
-set -g message-style fg=colour232,bg=colour166
+set -g message-style fg=color232,bg=color166
 
 # Make selections work even more like vi
 bind -T copy-mode-vi v send-keys -X begin-selection
