updates from laptop

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,14 +7,13 @@ bind-key C-Space send-prefix
 bind r source-file ~/.tmux.conf
 set -g allow-rename off
 set -g base-index 1
-set -g default-terminal "xterm-24bit"
+set -g default-terminal "xterm-ghostty"
 set -g history-limit 10000
 set -g mouse on
 set -g monitor-activity on
 set -s escape-time 0
 setw -g mode-keys vi
 setw -g xterm-keys on
-set-option -sa terminal-overrides ',xterm-24bit:Tc'
 set-option -g focus-events on # neovim said to do this
 
 # Binds - Panes
@@ -38,16 +37,16 @@ bind -n S-right next
 # Black: 16
 # Light black: 0
 # Dark grey: 237
-# Light grey: dim 7
+# Light grey: 20
 # Highlight: 4
 set -g status-style 'bg=color0'
 set -g status-interval 2
 set -g status-justify left
-set -g status-right '#[fg=color237,bg=color0]#[fg=color16,bg=color237]#S#[fg=color237,bg=color0] #[fg=color237,bg=color0]#[bg=color237,fg=color16]#{session_path}#[none,fg=color237,bg=color0]'
+set -g status-right '#[fg=color237,bg=color0]#[fg=color20,bg=color237]#S#[fg=color237,bg=color0] #[fg=color237,bg=color0]#[bg=color237,fg=color20]#{session_path}#[none,fg=color237,bg=color0]'
 set -g status-left '#(tmux-kube-status)'
 setw -g window-status-current-style 'bg=color0'
-setw -g window-status-current-format " #[fg=color237]#[fg=color4,bg=color237]#I #[fg=color16]#W #[fg=color237,bg=color0]"
-setw -g window-status-format ' #[dim,fg=color4] #I #[dim,fg=color7]#W #[fg=color4]#(tmux-window-flags "#{window_flags}") '
+setw -g window-status-current-format " #[fg=color237]#[fg=color4,bg=color237]#I #[fg=color20]#W #[fg=color237,bg=color0]"
+setw -g window-status-format ' #[dim,fg=color4] #I #[dim,fg=color20]#W #[fg=color4]#(tmux-window-flags "#{window_flags}") '
 setw -g window-status-activity-style ''
 
 # Panes
